# delabella

./: CMakeLists.txt
pkg/rpm/: delabella.spec  gnu-install-dirs.patch  include-ctime.patch
